--- a/ident/index.html
+++ b/ident/index.html
@@ -5,34 +5,96 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Identity Booking</title>
     <link rel="stylesheet" href="styles.css">
-    <script defer src="script.js"></script>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            padding: 20px;
+        }
+        #login-container, #dashboard {
+            max-width: 400px;
+            margin: auto;
+            padding: 20px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+        }
+        input, button {
+            display: block;
+            width: 100%;
+            margin: 10px 0;
+            padding: 10px;
+        }
+        button {
+            background-color: #007BFF;
+            color: white;
+            border: none;
+            cursor: pointer;
+        }
+        button:hover {
+            background-color: #0056b3;
+        }
+        #identity-details {
+            margin-top: 20px;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+    </style>
 </head>
 <body>
-    <div class="container">
-        <h1>Identity Booking System</h1>
-        <div id="login-section">
-            <input type="text" id="username" placeholder="Username">
-            <input type="password" id="password" placeholder="Password">
-            <button onclick="login()">Login</button>
-        </div>
-        
-        <div id="dashboard" class="hidden">
-            <h2>Welcome, <span id="user-name"></span></h2>
-            <button onclick="claimIdentity()">Claim Identity</button>
-            <button onclick="unclaimIdentity()">Unclaim Identity</button>
-            <div id="identity-info" class="hidden">
-                <h3>Assigned Identity</h3>
-                <p><strong>Full Name:</strong> <span id="full-name"></span></p>
-                <p><strong>Age:</strong> <span id="age"></span></p>
-                <p><strong>Date of Birth:</strong> <span id="dob"></span></p>
-                <p><strong>Place of Birth:</strong> <span id="pob"></span></p>
-                <p><strong>Place of Residence:</strong> <span id="por"></span></p>
-                <p><strong>Place of Work:</strong> <span id="pow"></span></p>
-                <p><strong>Gmail:</strong> <span id="gmail"></span></p>
-                <p><strong>Roblox:</strong> <span id="roblox"></span></p>
-                <p><strong>Discord:</strong> <span id="discord"></span></p>
-            </div>
-        </div>
+    <div id="login-container">
+        <h2>Login</h2>
+        <input type="text" id="username" placeholder="Username">
+        <input type="password" id="password" placeholder="Password">
+        <button onclick="login()">Login</button>
+        <p id="login-error" style="color: red;"></p>
     </div>
+    
+    <div id="dashboard" style="display: none;">
+        <h2>Welcome, <span id="user-name"></span></h2>
+        <button onclick="bookIdentity()">Book an Identity</button>
+        <div id="identity-details"></div>
+        <button onclick="unclaimIdentity()" id="unclaim-btn" style="display: none;">Unclaim Identity</button>
+        <button onclick="logout()">Logout</button>
+    </div>
+
+    <script>
+        function login() {
+            const username = document.getElementById("username").value;
+            const password = document.getElementById("password").value;
+            if (username && password) {
+                document.getElementById("login-container").style.display = "none";
+                document.getElementById("dashboard").style.display = "block";
+                document.getElementById("user-name").innerText = username;
+            } else {
+                document.getElementById("login-error").innerText = "Please enter valid credentials.";
+            }
+        }
+
+        function logout() {
+            document.getElementById("login-container").style.display = "block";
+            document.getElementById("dashboard").style.display = "none";
+            document.getElementById("username").value = "";
+            document.getElementById("password").value = "";
+        }
+
+        function bookIdentity() {
+            document.getElementById("identity-details").innerHTML = "<p>Fetching identity...</p>";
+            setTimeout(() => {
+                document.getElementById("identity-details").innerHTML = `
+                    <p><strong>Name:</strong> John Doe</p>
+                    <p><strong>Age:</strong> 30</p>
+                    <p><strong>Place of Birth:</strong> New York</p>
+                `;
+                document.getElementById("unclaim-btn").style.display = "block";
+            }, 1000);
+        }
+
+        function unclaimIdentity() {
+            document.getElementById("identity-details").innerHTML = "";
+            document.getElementById("unclaim-btn").style.display = "none";
+        }
+    </script>
 </body>
 </html>
