--- a/guides/se/amazon/index.html
+++ b/guides/se/amazon/index.html
@@ -32,6 +32,42 @@
                                 </button>
                             </a>
                         </div>
+                        <div class="button-item">
+                            <a class="main-button-link" rel="" href="agent2.html">
+                                <button class="main-button">
+                                    <div class="main-button-content">
+                                        <img src="https://firstaid.it.a2z.com/public/icons/setup_guide.svg" alt="Setup Guide Icon">
+                                        <div class="main-button-text">
+                                            <h3><b>SE Guide:</b> Agent 2 Agent (A2A)</h3>
+                                        </div>
+                                    </div>
+                                </button>
+                            </a>
+                        </div>
+                        <div class="button-item">
+                            <a class="main-button-link" rel="" href="agent3.html">
+                                <button class="main-button">
+                                    <div class="main-button-content">
+                                        <img src="https://firstaid.it.a2z.com/public/icons/setup_guide.svg" alt="Setup Guide Icon">
+                                        <div class="main-button-text">
+                                            <h3><b>SE Guide:</b> Agent 2 Agent (A2A)</h3>
+                                        </div>
+                                    </div>
+                                </button>
+                            </a>
+                        </div>
+                        <div class="button-item">
+                            <a class="main-button-link" rel="" href="agent4.html">
+                                <button class="main-button">
+                                    <div class="main-button-content">
+                                        <img src="https://firstaid.it.a2z.com/public/icons/setup_guide.svg" alt="Setup Guide Icon">
+                                        <div class="main-button-text">
+                                            <h3><b>SE Guide:</b> Agent 2 Agent (A2A)</h3>
+                                        </div>
+                                    </div>
+                                </button>
+                            </a>
+                        </div>
                         <div class="additional-text-box">
                         </div>
                     </div>
