--- a/exams/psychometric/index.html
+++ b/exams/psychometric/index.html
@@ -1,1 +1,23 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Irish Air Corps Psychometric Exam</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="container">
+        <header>
+            <h1>Psychometric Exam</h1>
+        </header>
 
+        <section class="intro">
+            <p>Welcome to the Psychometric Exam. Please read the instructions carefully before starting.</p>
+            <button id="start-btn">Start Exam</button>
+        </section>
+    </div>
+
+    <script src="script.js"></script>
+</body>
+</html>
