--- a/exams/psychometric/index.html
+++ b/exams/psychometric/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Irish Air Corps Psychometric Exam</title>
+    <title>Psychometric Exam</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -13,7 +13,7 @@
         </header>
 
         <section class="intro">
-            <p>Welcome to the Psychometric Exam. Please read the instructions carefully before starting.</p>
+            <p>Welcome to the exam. Please make sure to complete the test in one sitting.</p>
             <button id="start-btn">Start Exam</button>
         </section>
     </div>
