--- a/admin_panel_test.html
+++ b/admin_panel_test.html
@@ -79,18 +79,18 @@
 <body>
   <div class="wrapper">
     <div class="left">
-      <div class="form-row"><b>User ID:</b> <input type="text" value="96718229"> <button>Search</button></div>
-      <div class="form-row"><b>User Name:</b> <input type="text" value="QAQA17"> <button>Search</button></div>
-      <div class="form-row"><b>Builders Club Member:</b> <input type="checkbox"></div>
-      <div class="form-row"><b>Builders Club Type:</b> N/A</div>
-      <div class="form-row"><b>Builders Club Expiration Date:</b> N/A</div>
-      <div class="form-row"><b>Builders Club Renewal Date:</b> N/A</div>
+      <div class="form-row"><b>User ID:</b> <input type="text" value="26282"> <button>Search</button></div>
+      <div class="form-row"><b>User Name:</b> <input type="text" value="murder"> <button>Search</button></div>
+      <div class="form-row"><b>Is Premium Member:</b> <input type="checkbox"></div>
+      <div class="form-row"><b>Premium Subscription Type:</b> N/A</div>
+      <div class="form-row"><b>Premium Subscription Expiration Date:</b> N/A</div>
+      <div class="form-row"><b>Premium Subscription Renewal Date:</b> N/A</div>
       <div class="form-row"><b>Loyal Since:</b> N/A</div>
       <div class="form-row"><b>Current Location:</b> [ Offline ]</div>
-      <div class="form-row"><b>Is XBOX User</b><br>YES</div>
+      <div class="form-row"><b>Is XBOX User</b><br>NO</div>
 
       <div class="user-avatar">
-        <img src="https://tr.rbxcdn.com/2f13ea97335cb6c8dd34e764d3873dfd/150/150/AvatarHeadshot/Png" alt="Avatar">
+        <img src="https://t7.rbxcdn.com/180DAY-a17918617b20ac9c39b305241f23e58a" alt="Avatar">
       </div>
 
       <a href="#">User homepage</a>
@@ -111,7 +111,7 @@
 
     <div class="right">
       <div class="section-title">Update User</div>
-      <div class="form-row"><b>User Name:</b> <input type="text" value="QAQA17"></div>
+      <div class="form-row"><b>User Name:</b> <input type="text" value="murder"></div>
       <div class="form-row"><b>User Blurb:</b> <a href="#">(scrub)</a></div>
       <div class="form-row"><b>Email:</b> <input type="text"></div>
       <div class="form-row"><b>Password:</b> <input type="text"></div>
@@ -121,15 +121,14 @@
       <div class="form-row"><b>YouTube Url:</b> Not Connected</div>
       <div class="form-row"><b>Twitch Url:</b> Not Connected</div>
       <div class="form-row"><b>Google+ Url:</b> Not Connected</div>
-      <div class="form-row"><b>User Created:</b> 10/19/2015 7:28:56 PM</div>
+      <div class="form-row"><b>User Created:</b> 5/23/2007 7:28:56 PM</div>
       <div class="form-row"><b>Last Location:</b> Website</div>
-      <div class="form-row"><b>Last Activity:</b> 10/19/2015 9:28:21 PM</div>
-      <div class="form-row"><b>Approved:</b> <input type="checkbox" checked></div>
+      <div class="form-row"><b>Last Activity:</b> 5/23/2007 9:28:21 PM</div>
+      <div class="form-row"><b>Approved:</b> <input type="checkbox"></div>
       <div class="form-row"><button>Update User</button></div>
 
       <div class="section-title">Badges and settings</div>
       <div class="form-row"><b>Robux:</b> 0</div>
-      <div class="form-row"><b>Tickets:</b> 10</div>
       <div class="form-row"><b>Credit:</b> $0.00</div>
     </div>
   </div>
