--- a/admin_panel_test.html
+++ b/admin_panel_test.html
@@ -1,136 +1,114 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Roblox Admin Panel Copy</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      font-size: 12px;
-      margin: 0;
-      padding: 0;
-      background-color: white;
-    }
-    .wrapper {
-      width: 970px;
-      margin: 20px auto;
-      display: flex;
-    }
-    .left, .right {
-      padding: 10px;
-    }
-    .left {
-      width: 60%;
-      border-right: 1px solid #000;
-    }
-    .right {
-      width: 40%;
-    }
-    input[type="text"] {
-      font-size: 12px;
-      padding: 2px;
-      margin: 2px;
-      height: 20px;
-      width: 140px;
-    }
-    button {
-      font-size: 11px;
-      padding: 2px 5px;
-      height: 24px;
-    }
-    input[type="checkbox"] {
-      vertical-align: middle;
-    }
-    b {
-      font-weight: bold;
-    }
-    a {
-      color: blue;
-      text-decoration: underline;
-      font-size: 12px;
-      display: block;
-      margin: 2px 0;
-    }
-    .user-avatar img {
-      width: 95px;
-      height: 95px;
-      margin-top: 5px;
-    }
-    .section-title {
-      font-weight: bold;
-      margin-top: 10px;
-    }
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      font-size: 11px;
-      margin-top: 5px;
-    }
-    th, td {
-      border: 1px solid black;
-      padding: 3px;
-      text-align: left;
-    }
-    .form-row {
-      margin: 3px 0;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <title>Roblox Admin Clone</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            font-size: 13px;
+        }
+        .container {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 20px;
+        }
+        .section {
+            border: 1px solid #ccc;
+            padding: 15px;
+            width: 400px;
+        }
+        .user-avatar {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
+        input[type="text"] {
+            width: 100px;
+        }
+        .user-info label,
+        .update-user label {
+            display: block;
+            margin-top: 5px;
+        }
+        .user-info span,
+        .update-user span {
+            display: inline-block;
+            min-width: 100px;
+        }
+        button {
+            margin-top: 10px;
+        }
+    </style>
 </head>
 <body>
-  <div class="wrapper">
-    <div class="left">
-      <div class="form-row"><b>User ID:</b> <input type="text" value="26282"> <button>Search</button></div>
-      <div class="form-row"><b>User Name:</b> <input type="text" value="murder"> <button>Search</button></div>
-      <div class="form-row"><b>Is Premium Member:</b> <input type="checkbox"></div>
-      <div class="form-row"><b>Premium Subscription Type:</b> N/A</div>
-      <div class="form-row"><b>Premium Subscription Expiration Date:</b> N/A</div>
-      <div class="form-row"><b>Premium Subscription Renewal Date:</b> N/A</div>
-      <div class="form-row"><b>Loyal Since:</b> N/A</div>
-      <div class="form-row"><b>Current Location:</b> [ Offline ]</div>
-      <div class="form-row"><b>Is XBOX User</b><br>NO</div>
+<div class="container">
+    <div class="section user-info">
+        <label>User ID:</label>
+        <input type="text" value="96718229">
+        <button>Search</button><br>
 
-      <div class="user-avatar">
-        <img src="https://t7.rbxcdn.com/180DAY-a17918617b20ac9c39b305241f23e58a" alt="Avatar">
-      </div>
+        <label>User Name:</label>
+        <input type="text" value="QAQA17">
+        <button>Search</button><br>
 
-      <a href="#">User homepage</a>
-      <a href="#">Moderate user</a>
-      <a href="#">Payment info</a>
+        <label><input type="checkbox"> Builders Club Member</label><br>
+        <label>Builders Club Type:</label> N/A<br>
+        <label>Builders Club Expiration Date:</label> N/A<br>
+        <label>Builders Club Renewal Date:</label> <input type="text"><br>
+        <label>Loyal Since:</label> N/A<br>
+        <label>Current Location:</label> [ Offline ]<br>
+        <label>Is XBOX User:</label> YES<br>
 
-      <div class="section-title">Billing Info</div>
-      <div class="form-row"><b>Purchase Lock Status:</b> Unlocked</div>
-
-      <div class="section-title">Punishments</div>
-      <table>
-        <tr><th>ID</th><th>Action</th><th>Moderator</th><th>Created</th><th>Expiration</th></tr>
-      </table>
-
-      <div class="section-title">Seller Ban</div>
-      <div><b>Current ban:</b> None</div>
+        <div class="user-avatar">
+            <img src="https://via.placeholder.com/100" alt="Avatar">
+            <div>
+                <a href="#">User homepage</a><br>
+                <a href="#">Moderate user</a><br>
+                <a href="#">Payment info</a>
+            </div>
+        </div>
     </div>
 
-    <div class="right">
-      <div class="section-title">Update User</div>
-      <div class="form-row"><b>User Name:</b> <input type="text" value="murder"></div>
-      <div class="form-row"><b>User Blurb:</b> <a href="#">(scrub)</a></div>
-      <div class="form-row"><b>Email:</b> <input type="text"></div>
-      <div class="form-row"><b>Password:</b> <input type="text"></div>
-      <div class="form-row"><b>Facebook connect:</b> Not Connected</div>
-      <div class="form-row"><b>Facebook Url:</b> Not Connected</div>
-      <div class="form-row"><b>Twitter Url:</b> Not Connected</div>
-      <div class="form-row"><b>YouTube Url:</b> Not Connected</div>
-      <div class="form-row"><b>Twitch Url:</b> Not Connected</div>
-      <div class="form-row"><b>Google+ Url:</b> Not Connected</div>
-      <div class="form-row"><b>User Created:</b> 5/23/2007 7:28:56 PM</div>
-      <div class="form-row"><b>Last Location:</b> Website</div>
-      <div class="form-row"><b>Last Activity:</b> 5/23/2007 9:28:21 PM</div>
-      <div class="form-row"><b>Approved:</b> <input type="checkbox"></div>
-      <div class="form-row"><button>Update User</button></div>
+    <div class="section update-user">
+        <label>User Name:</label> <input type="text" value="QAQA17"><br>
+        <label>User Blurb:</label> <a href="#">(scrub)</a><br>
+        <label>Email:</label> <input type="text"><br>
+        <label>Password:</label> <input type="text"><br>
 
-      <div class="section-title">Badges and settings</div>
-      <div class="form-row"><b>Robux:</b> 0</div>
-      <div class="form-row"><b>Credit:</b> $0.00</div>
+        <label>Facebook connect:</label> Not Connected<br>
+        <label>Facebook Url:</label> Not Connected<br>
+        <label>Twitter Url:</label> Not Connected<br>
+        <label>YouTube Url:</label> Not Connected<br>
+        <label>Twitch Url:</label> Not Connected<br>
+        <label>Google+ Url:</label> Not Connected<br>
+
+        <label>User Created:</label> 10/19/2015 7:28:56 PM<br>
+        <label>Last Location:</label> Website<br>
+        <label>Last Activity:</label> 10/19/2015 9:28:21 PM<br>
+        <label><input type="checkbox" checked> Approved</label><br>
+
+        <button>Update User</button>
     </div>
-  </div>
+
+    <div class="section">
+        <h3>Billing Info</h3>
+        <label>Purchase Lock Status:</label> Unlocked
+    </div>
+
+    <div class="section">
+        <h3>Punishments</h3>
+        <label>ID | Action | Moderator | Created | Expiration</label><br>
+        <strong>Seller Ban</strong><br>
+        Current ban: None
+    </div>
+
+    <div class="section">
+        <h3>Badges and settings</h3>
+        <label>Robux:</label> 0<br>
+        <label>Tickets:</label> 10<br>
+        <label>Credit:</label> $0.00
+    </div>
+</div>
 </body>
 </html>
