--- a/admin_panel_test.html
+++ b/admin_panel_test.html
@@ -7,6 +7,7 @@
         body {
             font-family: Tahoma, Arial, sans-serif;
             font-size: 12px;
+            background-color: #f5f5f5;
             color: #000;
         }
         .main {
@@ -22,22 +23,36 @@
             vertical-align: top;
         }
         .section {
-            border: 1px solid #999;
+            background-color: #fff;
+            border: 1px solid #aaa;
             padding: 10px;
             margin-bottom: 15px;
+            box-shadow: 1px 1px 2px rgba(0,0,0,0.1);
         }
         .section h3 {
             margin: 0 0 8px 0;
             border-bottom: 1px solid #ccc;
             padding-bottom: 3px;
+            font-size: 14px;
         }
         input[type="text"] {
             width: 130px;
             font-size: 12px;
+            border: 1px solid #aaa;
+            padding: 2px 3px;
+        }
+        input[type="checkbox"] {
+            transform: scale(1.2);
         }
         button {
             font-size: 12px;
-            padding: 2px 5px;
+            padding: 2px 6px;
+            background-color: #eee;
+            border: 1px solid #999;
+            cursor: pointer;
+        }
+        button:hover {
+            background-color: #ddd;
         }
         .avatar {
             float: left;
@@ -46,11 +61,17 @@
         .links a {
             display: block;
             margin-bottom: 2px;
+            color: #00f;
+            text-decoration: underline;
         }
         .checkbox-label {
             display: flex;
             align-items: center;
             gap: 5px;
+        }
+        .highlight-yellow {
+            background-color: yellow;
+            font-weight: bold;
         }
     </style>
 </head>
@@ -91,8 +112,8 @@
                 <td>[ Offline ]</td>
             </tr>
             <tr>
-                <td>Is XBOX User:</td>
-                <td>YES</td>
+                <td><span class="highlight-yellow">Is XBOX User:</span></td>
+                <td><span class="highlight-yellow">YES</span></td>
             </tr>
         </table>
         <div style="margin-top:10px;">
@@ -142,8 +163,8 @@
 
     <div class="section">
         <h3>Badges and settings</h3>
-        <p>Robux: 0</p>
-        <p>Tickets: 10</p>
+        <p><span class="highlight-yellow">Robux:</span> 0</p>
+        <p><span class="highlight-yellow">Tickets:</span> 10</p>
         <p>Credit: $0.00</p>
     </div>
 </div>
