--- a/admin_panel_test.html
+++ b/admin_panel_test.html
@@ -81,26 +81,26 @@
         <table>
             <tr>
                 <td>User ID:</td>
-                <td><input type="text" value="96718229"> <button>Search</button></td>
+                <td><input type="text" value="26282"> <button>Search</button></td>
             </tr>
             <tr>
                 <td>User Name:</td>
-                <td><input type="text" value="QAQA17"> <button>Search</button></td>
+                <td><input type="text" value="murder"> <button>Search</button></td>
             </tr>
             <tr>
-                <td>Builders Club Member:</td>
+                <td>Is Premium Member:</td>
                 <td><input type="checkbox"></td>
             </tr>
             <tr>
-                <td>Builders Club Type:</td>
+                <td>Premium Subscription Type:</td>
                 <td>N/A</td>
             </tr>
             <tr>
-                <td>Builders Club Expiration Date:</td>
+                <td>Premium Subscription Expiration Date:</td>
                 <td>N/A</td>
             </tr>
             <tr>
-                <td>Builders Club Renewal Date:</td>
+                <td>Premium Subscription Renewal Date:</td>
                 <td><input type="text"></td>
             </tr>
             <tr>
@@ -112,13 +112,13 @@
                 <td>[ Offline ]</td>
             </tr>
             <tr>
-                <td><span class="highlight-yellow">Is XBOX User:</span></td>
-                <td><span class="highlight-yellow">YES</span></td>
+                <td>Is XBOX User:</td>
+                <td>NO</td>
             </tr>
         </table>
         <div style="margin-top:10px;">
             <div class="avatar">
-                <img src="https://via.placeholder.com/80" alt="avatar">
+                <img src="https://t7.rbxcdn.com/180DAY-a17918617b20ac9c39b305241f23e58a" alt="avatar">
             </div>
             <div class="links">
                 <a href="#">User homepage</a>
@@ -131,7 +131,7 @@
 
     <div class="section">
         <table>
-            <tr><td>User Name:</td><td><input type="text" value="QAQA17"></td></tr>
+            <tr><td>User Name:</td><td><input type="text" value="murder"></td></tr>
             <tr><td>User Blurb:</td><td><a href="#">(scrub)</a></td></tr>
             <tr><td>Email:</td><td><input type="text"></td></tr>
             <tr><td>Password:</td><td><input type="text"></td></tr>
@@ -144,14 +144,14 @@
             <tr><td>User Created:</td><td>10/19/2015 7:28:56 PM</td></tr>
             <tr><td>Last Location:</td><td>Website</td></tr>
             <tr><td>Last Activity:</td><td>10/19/2015 9:28:21 PM</td></tr>
-            <tr><td>Approved:</td><td><input type="checkbox" checked></td></tr>
+            <tr><td>Approved:</td><td><input type="checkbox"></td></tr>
         </table>
         <button style="margin-top:10px;">Update User</button>
     </div>
 
     <div class="section">
         <h3>Billing Info</h3>
-        <p>Purchase Lock Status: Unlocked</p>
+        <p>Purchase Lock Status: Locked</p>
     </div>
 
     <div class="section">
