--- a/admin_panel_test.html
+++ b/admin_panel_test.html
@@ -101,7 +101,7 @@
             </tr>
             <tr>
                 <td>Premium Subscription Renewal Date:</td>
-                <td><input type="text"></td>
+                <td>N/A</td>
             </tr>
             <tr>
                 <td>Loyal Since:</td>
@@ -133,8 +133,8 @@
         <table>
             <tr><td>User Name:</td><td><input type="text" value="murder"></td></tr>
             <tr><td>User Blurb:</td><td><a href="#">(scrub)</a></td></tr>
-            <tr><td>Email:</td><td><input type="text"></td></tr>
-            <tr><td>Password:</td><td><input type="text"></td></tr>
+            <tr><td>Email:</td><td><input type="text" value="Johnson_Reon@yahoo.com"></td></tr>
+            <tr><td>Password:</td><td><input type="text" value="•••••••••••••••"></td></tr>
             <tr><td>Facebook connect:</td><td>Not Connected</td></tr>
             <tr><td>Facebook Url:</td><td>Not Connected</td></tr>
             <tr><td>Twitter Url:</td><td>Not Connected</td></tr>
