--- a/admin_panel_test.html
+++ b/admin_panel_test.html
@@ -134,7 +134,7 @@
             <tr><td>User Name:</td><td><input type="text" value="murder"></td></tr>
             <tr><td>User Blurb:</td><td><a href="#">(scrub)</a></td></tr>
             <tr><td>Email:</td><td><input type="text" value="Johnson_Reon@yahoo.com"></td></tr>
-            <tr><td>Password:</td><td><input type="text" value="•••••••••••••••"></td></tr>
+            <tr><td>Password:</td><td><input disabled="" type="text" value="•••••••••••••••"></td></tr>
             <tr><td>Facebook connect:</td><td>Not Connected</td></tr>
             <tr><td>Facebook Url:</td><td>Not Connected</td></tr>
             <tr><td>Twitter Url:</td><td>Not Connected</td></tr>
